fixed layout bugs

--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@ input.search {
   text-align: center;
   outline: 0;
   border: 10px solid #F7F7F7;
-  width: 120%;
-  left: -10%;
+  width: 100%;
   position: relative;
   top: 10px;
   z-index: 2;
